RESOLVED FIXED115474
[Qt][Win] REGRESSION(r149416): broke Qt Win build
https://bugs.webkit.org/show_bug.cgi?id=115474
Summary [Qt][Win] REGRESSION(r149416): broke Qt Win build
Zoltan Arvai
Reported 2013-05-01 06:41:31 PDT
After landing build fix in http://trac.webkit.org/changeset/149429 it turned out other modifications are needed for Win build, because there are some Win specific code that refers to the deleted CoreIPC/BinarySemaphore. Patch will be attached shortly.
Attachments
patch (3.87 KB, patch)
2013-05-01 06:44 PDT, Zoltan Arvai
no flags
Zoltan Arvai
Comment 1 2013-05-01 06:44:25 PDT
WebKit Commit Bot
Comment 2 2013-05-01 07:24:10 PDT
Comment on attachment 200214 [details] patch Clearing flags on attachment: 200214 Committed r149433: <http://trac.webkit.org/changeset/149433>
WebKit Commit Bot
Comment 3 2013-05-01 07:24:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.