[Qt][Win] Fix build after r149416. https://bugs.webkit.org/show_bug.cgi?id=115474

Reviewed by Anders Carlsson.

Source/WebKit2:

* Platform/CoreIPC/Connection.h:
(Connection):
* Platform/CoreIPC/win/ConnectionWin.cpp:
(CoreIPC::Connection::dispatchSentMessagesUntil):

Source/WTF:

* WTF.pro:
* wtf/threads/BinarySemaphore.h:
(BinarySemaphore):


Canonical link: https://commits.webkit.org/133913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149433 268f45cc-cd09-0410-ab3c-d52691b4dbfc